Fix blog thumbnail sizing issues on mobile for admin and home page

--- a/blogadmin/static/css/blog_admin_detail.css
+++ b/blogadmin/static/css/blog_admin_detail.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,400,600&display=swap');
 .blog-admin-thumbnail{
-  width: 500px;
+  width: 45%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media only screen and (max-width: 480px) {
+  .blog-admin-thumbnail{
+    width: 100%;
+  }
 }
 
 .blog-admin-info a, .post-content p, h2, h4{
